# easy_dr

./: .gitmodules  Cargo.toml
src/: MyModule.jl  example.xlsx  hass_server.rs  input_data.rs  julia_interface.rs  juliainterface.rs  lib.rs  main.rs  main_loop.rs  model.rs  model_builder.rs  options.json  predicer.rs  server.rs  structures.rs  structures_old  utilities.rs
src/data/: data_1.xlsx  file.xlsx
