[package]
name = "easy_dr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
fs = "0.0.5"
pathbuf = "0.3.1"
reqwest = "0.11.14"
thread = "0.1.0"
umya-spreadsheet = "0.8.7"
xlsxwriter = "0.5.0"
