[package]
name = "easy_dr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
calamine = "0.19.1"
fs = "0.0.5"
pathbuf = "0.3.1"
reqwest = "0.11.14"
thread = "0.1.0"
umya-spreadsheet = "0.8.7"
jlrs = { version = "0.18.0-beta.2", features = ["sync-rt", "julia-1-8"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
csv = "1.2.1"
indexmap = "1.9.3"
ordered-float = "3.7.0"
